--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -58,6 +58,7 @@ jobs:
           
           pushd stream-applications > /dev/null
             echo "::info ::getting build version params"
+            echo "::info ::ROOT_DIR=$ROOT_DIR"
             source $ROOT_DIR/get-build-version-params.sh
             echo "BUILD_VERSION=$BUILD_VERSION" >> $GITHUB_ENV
             echo "BUILD_VERSION_TYPE=$BUILD_VERSION_TYPE" >> $GITHUB_ENV
