--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -64,7 +64,7 @@ jobs:
             echo "BUILD_VERSION_TYPE=$BUILD_VERSION_TYPE" >> $GITHUB_ENV
             echo "CUR_VERSION=$CUR_VERSION" >> $GITHUB_ENV
             echo "IS_VERSION_CHANGE=$IS_VERSION_CHANGE" >> $GITHUB_ENV
-
+            echo "NEXT_DEV_VERSION=$NEXT_DEV_VERSION" >> $GITHUB_ENV
             echo "::info ::creating streams applications matrix"
             $ROOT_DIR/create-matrices.sh
             if [ ! -f matrix.json ]; then
@@ -105,6 +105,7 @@ jobs:
             echo "::debug ::BUILD_VERSION_TYPE=$BUILD_VERSION_TYPE"
             echo "::debug ::CUR_VERSION=$CUR_VERSION"
             echo "::debug ::IS_VERSION_CHANGE=$IS_VERSION_CHANGE"
+            echo "::debug ::NEXT_DEV_VERSION=$NEXT_DEV_VERSION"
             echo "::debug ::JDK_BUILD=$JDK_BUILD"
             echo "::debug ::JRE_DEFAULT=$JRE_DEFAULT"
           fi
@@ -117,6 +118,7 @@ jobs:
       build_version: ${{ env.BUILD_VERSION }}
       build_version_type: ${{ env.BUILD_VERSION_TYPE }}
       is_version_change: ${{ env.IS_VERSION_CHANGE }}
+      next_dev_version: ${{ env.NEXT_DEV_VERSION }}
       jdk_build: ${{ env.JDK_BUILD }}
       jre_version: ${{ env.JRE_DEFAULT }}
   core:
@@ -168,14 +170,18 @@ jobs:
         env:
           VERBOSE: ${{ (github.debug || inputs.verbose) && '-X' || '' }}
         run: |
+          ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-          ./mvnw versions:set \
-            -DnewVersion='${{ needs.parameters.outputs.build_version }}'
-            -s .settings.xml \
-            -DprocessAllModules=true \
-            -DgenerateBackupPoms=false \
-            -Dartifactory.publish.artifacts=false \
-            -B $VERBOSE
+            echo "::notice ::updating versions"
+            ./mvnw versions:set \
+              -DnewVersion='${{ needs.parameters.outputs.build_version }}'
+              -s .settings.xml \
+              -DprocessAllModules=true \
+              -DgenerateBackupPoms=false \
+              -Dartifactory.publish.artifacts=false \
+              -B $VERBOSE
+            echo "::notice ::checking updated versions"
+            $ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }}
           popd >/dev/null
       - name: 'Action: build initial dependencies'
         shell: bash
@@ -286,14 +292,18 @@ jobs:
         env:
           VERBOSE: ${{ (github.debug || inputs.verbose) && '-X' || '' }}
         run: |
+          ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-          ./mvnw versions:set \
-            -DnewVersion='${{ needs.parameters.outputs.build_version }}'
-            -s .settings.xml \
-            -DprocessAllModules=true \
-            -DgenerateBackupPoms=false \
-            -Dartifactory.publish.artifacts=false \
-            -B $VERBOSE
+            echo "::notice ::updating versions"
+            ./mvnw versions:set \
+              -DnewVersion='${{ needs.parameters.outputs.build_version }}'
+              -s .settings.xml \
+              -DprocessAllModules=true \
+              -DgenerateBackupPoms=false \
+              -Dartifactory.publish.artifacts=false \
+              -B $VERBOSE
+            echo "::notice ::checking updated versions"
+            $ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }}
           popd >/dev/null
       - name: 'Configure: Docker login'
         uses: docker/login-action@v2
@@ -380,14 +390,18 @@ jobs:
         env:
           VERBOSE: ${{ (github.debug || inputs.verbose) && '-X' || '' }}
         run: |
+          ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-          ./mvnw versions:set \
-            -DnewVersion='${{ needs.parameters.outputs.build_version }}'
-            -s .settings.xml \
-            -DprocessAllModules=true \
-            -DgenerateBackupPoms=false \
-            -Dartifactory.publish.artifacts=false \
-            -B $VERBOSE
+            echo "::notice ::updating versions"
+            ./mvnw versions:set \
+              -DnewVersion='${{ needs.parameters.outputs.build_version }}'
+              -s .settings.xml \
+              -DprocessAllModules=true \
+              -DgenerateBackupPoms=false \
+              -Dartifactory.publish.artifacts=false \
+              -B $VERBOSE
+            echo "::notice ::checking updated versions"
+            $ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }}
           popd >/dev/null
       - name: 'Configure: Docker login'
         uses: docker/login-action@v2
@@ -476,14 +490,18 @@ jobs:
         env:
           VERBOSE: ${{ (github.debug || inputs.verbose) && '-X' || '' }}
         run: |
+          ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-          ./mvnw versions:set \
-            -DnewVersion='${{ needs.parameters.outputs.build_version }}'
-            -s .settings.xml \
-            -DprocessAllModules=true \
-            -DgenerateBackupPoms=false \
-            -Dartifactory.publish.artifacts=false \
-            -B $VERBOSE
+            echo "::notice ::updating versions"
+            ./mvnw versions:set \
+              -DnewVersion='${{ needs.parameters.outputs.build_version }}'
+              -s .settings.xml \
+              -DprocessAllModules=true \
+              -DgenerateBackupPoms=false \
+              -Dartifactory.publish.artifacts=false \
+              -B $VERBOSE
+            echo "::notice ::checking updated versions"
+            $ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }}
           popd >/dev/null
       - name: 'Configure: Docker login'
         uses: docker/login-action@v2
@@ -566,14 +584,18 @@ jobs:
         env:
           VERBOSE: ${{ (github.debug || inputs.verbose) && '-X' || '' }}
         run: |
+          ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-          ./mvnw versions:set \
-            -DnewVersion='${{ needs.parameters.outputs.build_version }}'
-            -s .settings.xml \
-            -DprocessAllModules=true \
-            -DgenerateBackupPoms=false \
-            -Dartifactory.publish.artifacts=false \
-            -B $VERBOSE
+            echo "::notice ::updating versions"
+            ./mvnw versions:set \
+              -DnewVersion='${{ needs.parameters.outputs.build_version }}'
+              -s .settings.xml \
+              -DprocessAllModules=true \
+              -DgenerateBackupPoms=false \
+              -Dartifactory.publish.artifacts=false \
+              -B $VERBOSE
+            echo "::notice ::checking updated versions"
+            $ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }}
           popd >/dev/null
       - name: 'Build: stream-applications-release-train'
         shell: bash
@@ -600,6 +622,32 @@ jobs:
           tag-release-branch: ${{ needs.parameters.outputs.build_version }}
           tag-release-tag: ${{ needs.parameters.outputs.build_version }}
           tag-release-tag-prefix: v
+      - name: 'Action: update next dev version'
+        if: ${{ needs.parameters.outputs.is_version_change == 'true' }}
+        shell: bash
+        env:
+          VERBOSE: ${{ (github.debug || inputs.verbose) && '-X' || '' }}
+        run: |
+          ROOT_DIR=$(realpath $PWD)
+          pushd stream-applications >/dev/null
+            echo "::notice ::updating next dev versions"
+            ./mvnw versions:set \
+              -DnewVersion='${{ needs.parameters.outputs.next_dev_version }}'
+              -s .settings.xml \
+              -DprocessAllModules=true \
+              -DgenerateBackupPoms=false \
+              -Dartifactory.publish.artifacts=false \
+              -B $VERBOSE
+            echo "::notice ::setting released version to next dev version"
+            $ROOT_DIR/next-dev-version.sh
+          popd >/dev/null
+      - name: Commit Next Dev Changes
+        if: ${{ needs.parameters.outputs.is_version_change == 'true' }}
+        uses: jvalkeal/build-zoo-handler@v0.0.4
+        with:
+          commit-changes-branch: main
+          commit-changes-message: Next development version
+
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
