Refactor CDC Debizium Source
 - Add support for DB2, Cassandra, Vitess, Spanner
 - Add AVRO format support. Defaults to JSON
 - Remove the Metadata repo configuration.
 - Remove the Spring property sortcuts. Only the native Debezium properties are used.
 - change the native properties prefix from cdc.config to cdc.debezium.
 - Removes the need to fork and modify the Debezium engine code.
 - Add binding name strategy.
 - Update to latest 2.1.4 Final version.

--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>cdc-debezium-source</module>
+        <module>cdc-debezium-source2</module>
         <module>file-source</module>
         <module>ftp-source</module>
         <module>jdbc-source</module>
