--- a/functions/supplier/pom.xml
+++ b/functions/supplier/pom.xml
@@ -26,7 +26,7 @@
         <module>websocket-supplier</module>
         <module>s3-supplier</module>
         <module>twitter-supplier</module>
-        <module>cdc-debezium-supplier</module>
+        <module>debezium-supplier</module>
         <module>syslog-supplier</module>
         <module>xmpp-supplier</module>
         <module>zeromq-supplier</module>
