--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-harbor.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-harbor.properties
@@ -1,4 +1,4 @@
-source.cdc-debezium=docker:projects.registry.vmware.com/springcloudstream/cdc-debezium-source-kafka:@apps.harbor.version@
+source.debezium=docker:projects.registry.vmware.com/springcloudstream/debezium-source-kafka:@apps.harbor.version@
 source.file=docker:projects.registry.vmware.com/springcloudstream/file-source-kafka:@apps.harbor.version@
 source.ftp=docker:projects.registry.vmware.com/springcloudstream/ftp-source-kafka:@apps.harbor.version@
 source.http=docker:projects.registry.vmware.com/springcloudstream/http-source-kafka:@apps.harbor.version@
