--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -1,5 +1,5 @@
-source.cdc-debezium=https://@repo-spring-io@/org/springframework/cloud/stream/app/cdc-debezium-source-kafka/@apps.version@/cdc-debezium-source-kafka-@apps.version@.jar
-source.cdc-debezium.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cdc-debezium-source-kafka/@apps.version@/cdc-debezium-source-kafka-@apps.version@-metadata.jar
+source.debezium=https://@repo-spring-io@/org/springframework/cloud/stream/app/debezium-source-kafka/@apps.version@/debezium-source-kafka-@apps.version@.jar
+source.debezium.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/debezium-source-kafka/@apps.version@/debezium-source-kafka-@apps.version@-metadata.jar
 source.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@apps.version@/file-source-kafka-@apps.version@.jar
 source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@apps.version@/file-source-kafka-@apps.version@-metadata.jar
 source.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-source-kafka/@apps.version@/ftp-source-kafka-@apps.version@.jar
