--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -1,5 +1,5 @@
-source.cdc-debezium=maven://org.springframework.cloud.stream.app:cdc-debezium-source-rabbit:@apps.version@
-source.cdc-debezium.metadata=maven://org.springframework.cloud.stream.app:cdc-debezium-source-rabbit:jar:metadata:@apps.version@
+source.debezium=maven://org.springframework.cloud.stream.app:debezium-source-rabbit:@apps.version@
+source.debezium.metadata=maven://org.springframework.cloud.stream.app:debezium-source-rabbit:jar:metadata:@apps.version@
 source.file=maven://org.springframework.cloud.stream.app:file-source-rabbit:@apps.version@
 source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-rabbit:jar:metadata:@apps.version@
 source.ftp=maven://org.springframework.cloud.stream.app:ftp-source-rabbit:@apps.version@
