--- a/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -28,11 +28,6 @@
         <!-- common javadocs -->
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
-            <artifactId>cdc-debezium-common</artifactId>
-            <version>${java-functions.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>file-common</artifactId>
             <version>${java-functions.version}</version>
         </dependency>
@@ -64,7 +59,7 @@
         <!-- supplier javadocs -->
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
-            <artifactId>cdc-debezium-supplier</artifactId>
+            <artifactId>debezium-supplier</artifactId>
             <version>${java-functions.version}</version>
         </dependency>
         <dependency>
