--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>cdc-debezium-source</module>
+        <module>debezium-source</module>
         <module>file-source</module>
         <module>ftp-source</module>
         <module>jdbc-source</module>
