--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -1,4 +1,4 @@
-source.cdc-debezium=docker:springcloudstream/cdc-debezium-source-rabbit:@apps.docker.tag@
+source.debezium=docker:springcloudstream/debezium-source-rabbit:@apps.docker.tag@
 source.file=docker:springcloudstream/file-source-rabbit:@apps.docker.tag@
 source.ftp=docker:springcloudstream/ftp-source-rabbit:@apps.docker.tag@
 source.http=docker:springcloudstream/http-source-rabbit:@apps.docker.tag@
