--- a/applications/source/cdc-debezium-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/cdc-debezium-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,12 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.fn.supplier.cdc.CdcSupplierProperties, \
-  org.springframework.cloud.fn.supplier.cdc.CdcSupplierProperties$Header, \
-  org.springframework.cloud.fn.common.cdc.CdcCommonProperties, \
-  org.springframework.cloud.fn.common.cdc.CdcCommonProperties$Flattening, \
-  org.springframework.cloud.fn.common.cdc.CdcCommonProperties$Offset, \
-  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties, \
-  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Gemfire, \
-  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Redis, \
-  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$DynamoDb, \
-  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Jdbc, \
-  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Zookeeper, \
-  org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Mongo \
+configuration-properties.classes=org.springframework.cloud.fn.supplier.cdc.CdcProperties
+
