--- a/applications/source/debezium-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/debezium-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,2 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.fn.supplier.cdc.CdcProperties
+configuration-properties.classes=org.springframework.cloud.fn.supplier.debezium.DebeziumProperties
 
