--- a/applications/source/debezium-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/debezium-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,1 +1,1 @@
-configuration-properties.classes=org.springframework.cloud.fn.supplier.cdc.CdcProperties
+configuration-properties.classes=org.springframework.cloud.fn.supplier.debezium.DebeziumProperties
