--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -9,7 +9,7 @@ on:
 env:
   MAIN_PATH: 'build-dir'
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  MAVEN_THREADS: 'true'
+  MAVEN_THREADS: 'false'
 jobs:
   check:
     if: github.repository == 'spring-cloud/stream-applications'
@@ -73,7 +73,7 @@ jobs:
           else
             MVN_THR=
           fi
-          MAVEN_OPTS="-s $BUILD_DIR/.settings.xml -B $MVN_THR"
+          MAVEN_OPTS="-s $BUILD_DIR/.settings.xml -B -U -X $MVN_THR"
           echo "VERBOSE=$VERBOSE"
           if [ "$VERBOSE" = "true" ]; then
             MAVEN_OPTS="-X $MAVEN_OPTS"
@@ -95,8 +95,9 @@ jobs:
           done
           set +e
           if [ "$ROOT_MODULES" != "" ]; then
-              # Module with no / are probable a root module that contains other modules and will trigger a lot of dependant builds without real value
+              # Module with no / are probably a root module that contains other modules and will trigger a lot of dependant builds without real value
               echo "::info ::building $ROOT_MODULES"
+              echo "::debug ::MAVEN:./mvnw $MAVEN_OPTS -pl $ROOT_MODULES install"
               ./mvnw $MAVEN_OPTS -pl $ROOT_MODULES install
               RC=$?
               if ((RC!=0)); then
@@ -105,6 +106,7 @@ jobs:
           fi
           if [ "$FOLDERS" != "" ]; then
             echo "::info ::verify $FOLDERS and dependents"
+            echo "::debug ::MAVEN:./mvnw $MAVEN_OPTS -amd -pl $FOLDERS install"
             ./mvnw $MAVEN_OPTS -amd -pl $FOLDERS install
             RC=$?
             if ((RC!=0)); then
